Fix burger menu not centered on mobile by using SVG instead of font

--- a/src/components/NavMenu/NavMenu.css
+++ b/src/components/NavMenu/NavMenu.css
@@ -21,8 +21,8 @@
   position: fixed;
   background-color: var(--quadary);
   border-radius: 50%;
-  width: 2rem;
-  height: 2rem;
+  width: 40px;
+  height: 40px;
   display:flex;
   justify-content: center;
   align-items: center;
